--- a/package.json
+++ b/package.json
@@ -15,14 +15,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "flexsearch": "^0.7.31",
+    "focus-visible": "^5.2.0",
+    "git-url-parse": "^13.1.0",
+    "intersection-observer": "^0.12.2",
+    "match-sorter": "^6.3.1",
     "next": "^13.4.12",
+    "next-seo": "^6.1.0",
+    "next-themes": "^0.2.1",
     "nextra": "^2.10.0",
-    "nextra-theme-docs": "^2.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "scroll-into-view-if-needed": "^3.0.10"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
+    "postcss-import": "^15.1.0",
+    "postcss-lightningcss": "^0.9.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   }
 }
