--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "flexsearch": "^0.7.31",
+    "flexsearch": "^0.7.21",
     "focus-visible": "^5.2.0",
     "git-url-parse": "^13.1.0",
     "intersection-observer": "^0.12.2",
@@ -30,7 +30,11 @@
     "scroll-into-view-if-needed": "^3.0.10"
   },
   "devDependencies": {
+    "@types/flexsearch": "^0.7.3",
+    "@types/git-url-parse": "^9.0.1",
     "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
     "postcss-import": "^15.1.0",
     "postcss-lightningcss": "^0.9.0",
     "tailwindcss": "^3.3.3",
