--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,7 +24,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  NEXT_PUBLIC_BASE_PATH: /launcher-tutorials
+  NEXT_PUBLIC_BASE_PATH: /docs
 
 jobs:
   # Build job
