--- a/package.json
+++ b/package.json
@@ -17,30 +17,31 @@
   "license": "MIT",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "flexsearch": "^0.7.21",
+    "flexsearch": "^0.7.43",
     "focus-visible": "^5.2.0",
     "git-url-parse": "^14.0.0",
     "intersection-observer": "^0.12.2",
-    "lucide-react": "^0.302.0",
-    "match-sorter": "^6.3.1",
-    "next": "^13.4.12",
-    "next-seo": "^6.1.0",
+    "lucide-react": "^0.317.0",
+    "match-sorter": "^6.3.3",
+    "next": "^14.1.0",
+    "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
-    "nextra": "^2.10.0",
+    "nextra": "^2.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "scroll-into-view-if-needed": "^3.0.10"
+    "scroll-into-view-if-needed": "^3.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/flexsearch": "^0.7.3",
-    "@types/git-url-parse": "^9.0.1",
-    "@types/node": "^20.4.5",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.2.7",
-    "postcss-import": "^15.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/flexsearch": "^0.7.6",
+    "@types/git-url-parse": "^9.0.3",
+    "@types/node": "^20.11.10",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "postcss-import": "^16.0.0",
     "postcss-lightningcss": "^1.0.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
